--- a/IDCA.Client/View/SettingWindow.xaml
+++ b/IDCA.Client/View/SettingWindow.xaml
@@ -1,8 +1,9 @@
-﻿<view:CustomWindow 
+﻿<mah:MetroWindow
     x:Class="IDCA.Client.View.SettingWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:view="clr-namespace:IDCA.Client.View"
     mc:Ignorable="d"
@@ -10,8 +11,8 @@
     Height="450"
     Width="600"
     ResizeMode="NoResize"
-    Style="{StaticResource CustomWindowStyle}">
+    Background="{StaticResource IDCA.Brushes.Window.Background}">
     <Grid>
         
     </Grid>
-</view:CustomWindow>
+</mah:MetroWindow>
