--- a/IDCA.Client/View/StartWindow.xaml
+++ b/IDCA.Client/View/StartWindow.xaml
@@ -1,22 +1,25 @@
-﻿<view:CustomWindow
+﻿<mah:MetroWindow
     x:Class="IDCA.Client.View.StartWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:view="clr-namespace:IDCA.Client.View"
     xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
     d:DataContext="{d:DesignInstance Type=viewmodel:StartWindowViewModel}"
     mc:Ignorable="d"
     Height="550" 
     Width="850"
-    Style="{StaticResource CustomWindowStyle}">
+    Background="{StaticResource IDCA.Brushes.Window.Background}"
+    TextElement.Foreground="Black"
+    ResizeMode="CanMinimize"
+    >
 
     <Window.DataContext>
         <viewmodel:StartWindowViewModel/>
     </Window.DataContext>
-
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/>
@@ -27,7 +30,7 @@
         <Grid Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
             <TextBlock Grid.Row="0"
@@ -43,16 +46,24 @@
                        FontSize="{StaticResource IDCA.Font.SubTitle}"
                        VerticalAlignment="Center"/>
             <ListBox Grid.Row="2"
-                     Margin="20 8 80 50"
+                     Margin="55 8 80 50"
                      Width="270"
                      BorderThickness="0"
-                     Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}" 
+                     Background="Transparent" 
+                     ScrollViewer.HorizontalScrollBarVisibility="Hidden"
                      ItemsSource="{Binding TemplateItems}"
                      SelectedIndex="{Binding TemplateSelectedIndex}"
                      d:ItemsSource="{d:SampleData ItemCount=5}">
+                <ListBox.Resources>
+                    <Style TargetType="ListBoxItem" BasedOn="{StaticResource MahApps.Styles.ListBoxItem}">
+                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="Margin" Value="5"/>
+                    </Style>
+                </ListBox.Resources>
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid Width="240"
+                              Background="Transparent"
                               HorizontalAlignment="Center"
                               VerticalAlignment="Center">
                             <Grid.RowDefinitions>
@@ -87,6 +98,7 @@
                     <Setter Property="Height" Value="30"/>
                     <Setter Property="Width" Value="30"/>
                     <Setter Property="Margin" Value="5"/>
+                    <Setter Property="BorderBrush" Value="{StaticResource MahApps.Brushes.Button.Border}"/>
                     <Setter Property="Background" Value="{StaticResource IDCA.Brushes.Button.Background}"/>
                     <Setter Property="VerticalContentAlignment" Value="Bottom"/>
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
@@ -103,6 +115,7 @@
                     <Setter Property="FontSize" Value="13"/>
                     <Setter Property="VerticalContentAlignment" Value="Center"/>
                     <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
+                    <Setter Property="BorderBrush" Value="{StaticResource MahApps.Brushes.Button.Border}"/>
                 </Style>
             </Grid.Resources>
 
@@ -182,4 +195,4 @@
 
         </Grid>
     </Grid>
-</view:CustomWindow>
+</mah:MetroWindow>
