--- a/IDCA.Client/View/Style/DataGrid.xaml
+++ b/IDCA.Client/View/Style/DataGrid.xaml
@@ -1,36 +1,28 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="IDCA.DataGrid.Base" TargetType="DataGrid">
-        <Setter Property="Margin" Value="5"/>
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+    
+    <Style x:Key="IDCA.DataGrid.Base" TargetType="DataGrid" BasedOn="{StaticResource MahApps.Styles.DataGrid}">
         <Setter Property="FontFamily" Value="{StaticResource IDCA.Font.Family}"/>
         <Setter Property="FontSize" Value="{StaticResource IDCA.Font.Size.Content}"/>
-        <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
         <Setter Property="VerticalScrollBarVisibility" Value="Auto"/>
         <Setter Property="HorizontalScrollBarVisibility" Value="Auto"/>
+        <Setter Property="GridLinesVisibility" Value="All"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{StaticResource IDCA.Burshes.DataGrid.Separater}"/>
         <Setter Property="VerticalGridLinesBrush" Value="{StaticResource IDCA.Burshes.DataGrid.Separater}"/>
         <Setter Property="HorizontalGridLinesBrush" Value="{StaticResource IDCA.Burshes.DataGrid.Separater}"/>
         <Setter Property="AutoGenerateColumns" Value="False"/>
-        <Setter Property="CanUserAddRows" Value="False"/>
-        <Setter Property="CanUserDeleteRows" Value="False"/>
+        <Setter Property="CanUserAddRows" Value="True"/>
+        <Setter Property="CanUserDeleteRows" Value="True"/>
         <Setter Property="CanUserReorderColumns" Value="False"/>
         <Setter Property="CanUserResizeColumns" Value="False"/>
         <Setter Property="CanUserResizeRows" Value="False"/>
         <Setter Property="CanUserSortColumns" Value="False"/>
-        <Setter Property="RowHeaderWidth" Value="0"/>
+        <Setter Property="RowHeaderWidth" Value="20"/>
         <Setter Property="ColumnHeaderHeight" Value="35"/>
-        <Setter Property="ColumnHeaderStyle">
-            <Setter.Value>
-                <Style TargetType="DataGridColumnHeader">
-                    <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource AncestorType=Window}, Path=Background}"/>
-                </Style>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="RowStyle">
-            <Setter.Value>
-                <Style TargetType="DataGridRow">
-                    <Setter Property="Height" Value="35"/>
-                </Style>
-            </Setter.Value>
-        </Setter>
+        <Setter Property="AllowDrop" Value="True"/>
     </Style>
 </ResourceDictionary>
