--- a/IDCA.Client/View/TableSettingWindow.xaml
+++ b/IDCA.Client/View/TableSettingWindow.xaml
@@ -1,9 +1,10 @@
-﻿<view:CustomWindow 
+﻿<mah:MetroWindow
         x:Class="IDCA.Client.View.TableSettingWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:view="clr-namespace:IDCA.Client.View"
         xmlns:viewmodel="clr-namespace:IDCA.Client.ViewModel" 
@@ -11,7 +12,7 @@
         mc:Ignorable="d"
         Height="600" 
         Width="1000"
-        Style="{StaticResource CustomWindowStyle}">
+        Background="{StaticResource IDCA.Brushes.Window.Background}">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -20,7 +21,7 @@
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="50"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -33,13 +34,13 @@
             
             <StackPanel Grid.Column="0" Orientation="Horizontal">
                 <StackPanel.Resources>
-                    <Style TargetType="Button">
+                    <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
                         <Setter Property="Margin" Value="5"/>
                         <Setter Property="Width" Value="60"/>
                         <Setter Property="Height" Value="20"/>
                         <Setter Property="Cursor" Value="Hand"/>
                     </Style>
-                    <Style TargetType="TextBox">
+                    <Style TargetType="TextBox" BasedOn="{StaticResource MahApps.Styles.TextBox}">
                         <Setter Property="Width" Value="120"/>
                         <Setter Property="Height" Value="20"/>
                         <Setter Property="IsReadOnly" Value="True"/>
@@ -53,7 +54,7 @@
                         <ControlTemplate TargetType="Button">
                             <Grid Width="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Width}"
                                   Height="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Height}"
-                                  Background="#00000000">
+                                  Background="Transparent">
                                 <icon:PackIconMaterialDesign Kind="Folder"
                                                              Width="20"
                                                              Height="20"
@@ -71,7 +72,7 @@
                         <ControlTemplate TargetType="Button">
                             <Grid Width="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Width}"
                                   Height="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Height}"
-                                  Background="#00000000">
+                                  Background="Transparent">
                                 <TextBlock HorizontalAlignment="Center"
                                            VerticalAlignment="Center"
                                            Text="MDM"
@@ -89,7 +90,7 @@
                         <ControlTemplate TargetType="Button">
                             <Grid Width="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Width}"
                                   Height="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Height}"
-                                  Background="#00000000">
+                                  Background="Transparent">
                                 <icon:PackIconModern Kind="OfficeExcel"
                                                      Width="20"
                                                      Height="20"
@@ -132,14 +133,14 @@
         <Grid Grid.Row="1">
 
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="130"/>
+                <ColumnDefinition Width="150"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <Border Grid.Column="0"
                     BorderThickness="0 0 1 0">
                 <TreeView BorderThickness="0"
-                          FontSize="15"
+                          FontSize="{StaticResource IDCA.Font.Size.Content}"
                           Background="{Binding RelativeSource={RelativeSource AncestorType=Window, Mode=FindAncestor}, Path=Background}"
                           ItemsSource="{Binding Tree.Children}"
                           d:ItemsSource="{d:SampleData ItemCount=5}">
@@ -157,11 +158,11 @@
                                     </Style>
                                 </Grid.Resources>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="60"/>
+                                    <ColumnDefinition Width="80"/>
                                     <ColumnDefinition Width="30"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBlock Grid.Column="0" 
-                                           FontSize="13"
+                                           FontSize="{StaticResource IDCA.Font.Size.Content}"
                                            FontFamily="{StaticResource IDCA.Font.Family}"
                                            VerticalAlignment="Center"
                                            Text="{Binding Name}"/>
@@ -193,4 +194,4 @@
 
         </Grid>
     </Grid>
-</view:CustomWindow>
+</mah:MetroWindow>
