--- a/IDCA.Client/View/Style/Button.xaml
+++ b/IDCA.Client/View/Style/Button.xaml
@@ -1,6 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Colors.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
+    
+    <Style x:Key="IDCA.Window.DialogButton" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+        <Setter Property="Height" Value="30"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource MahApps.Brushes.Button.Border}"/>
+        <Setter Property="Background" Value="{DynamicResource IDCA.Brushes.Button.Background}"/>
+        <Setter Property="VerticalContentAlignment" Value="Bottom"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Content" Value="..."/>
+    </Style>
     <Style x:Key="IDCA.Button.Remove" TargetType="Button">
         <Setter Property="Width" Value="30"/>
         <Setter Property="Height" Value="30"/>
